<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/blue_shade_1">
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/titreNE"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/titreNC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            tools:context=".new_entreprise">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/identrepriseid"
                style="@style/textinput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="5dp"
                android:fontFamily="@font/poppins_medium"
                android:hint="Numéro d'identification des entreprises"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"

                app:endIconMode="clear_text"
                app:endIconTint="@color/gray_300"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edEid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idemailEn"
                style="@style/textinput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="5dp"
                android:layout_below="@+id/identrepriseid"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/email"
                app:endIconTint="@color/gray_300"
                app:endIconMode="clear_text"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edemailE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck"
                    android:fontFamily="@font/poppins_medium" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idpassE"

                style="@style/textinput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_marginStart="20dp"
                android:layout_below="@+id/idemailEn"
                android:fontFamily="@font/poppins_medium"
                app:endIconTint="@color/gray_300"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edpassE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp"
                    android:importantForAutofill="no"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idconfermpassE"
                app:endIconTint="@color/gray_300"
                style="@style/textinput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_marginStart="20dp"
                android:layout_below="@+id/idpassE"
                android:fontFamily="@font/poppins_medium"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                android:hint="@string/cpassword"
                app:endIconMode="password_toggle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edconfermpassE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins_medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idnameE"
                style="@style/textinput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="5dp"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/NomE"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                android:layout_below="@+id/idconfermpassE"
                app:endIconMode="clear_text"
                app:endIconTint="@color/gray_300"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ednameE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idtelE"
                style="@style/textinput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/tel"
                app:counterEnabled="true"
                app:counterMaxLength="8"
                app:endIconMode="clear_text"
                android:padding="5dp"
                android:layout_below="@+id/idnameE"
                app:prefixText="+216"
                app:prefixTextColor="@color/white"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:endIconTint="@color/gray_300"
                app:counterTextColor="@color/gray_300">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtelE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:importantForAutofill="no"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="phone"
                    android:maxLength="8" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idlocalC"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_below="@+id/idtelE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"



                android:fontFamily="@font/poppins_medium"

                android:hint="Ville">

                <AutoCompleteTextView
                    android:id="@+id/edlocC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:minHeight="48dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp"/>


            </com.google.android.material.textfield.TextInputLayout>
            <Button

                android:id="@+id/Enregistre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:background="@drawable/btn_bg"
                android:layout_below="@+id/idlocalC"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"


                android:text="@string/enregistre"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/prgresscnx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/progress_back"
                android:visibility="gone"/>





        </RelativeLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>