<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_shade_1"
    tools:context=".login">


    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connection"
        android:layout_margin="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"

        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="12sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idtel"
        style="@style/textinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_medium"
        android:hint="CIN ou IDE "
        android:padding="5dp"

        android:textColorHint="@color/white"


        app:endIconMode="clear_text"
        app:hintTextColor="@color/white"

        app:counterTextColor="@color/gray_300"

        app:endIconTint="@color/gray_300">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:importantForAutofill="no"
            android:inputType="number"

            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idpass"

        style="@style/textinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/idtel"
        android:fontFamily="@font/poppins_medium"

        android:hint="@string/password"
        app:endIconMode="password_toggle"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:endIconTint="@color/gray_300"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            android:importantForAutofill="no"
            android:fontFamily="@font/poppins_medium"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toTopOf="@+id/idtel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633"
        app:srcCompat="@drawable/logo" />

    <Button

        android:id="@+id/connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:background="@drawable/btn_bg"
        android:layout_below="@+id/idpass"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"


        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/prgresscnx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_back"
        android:visibility="gone"/>






</RelativeLayout>